# marko

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
cmake/: markoConfig.cmake  markoConfig.cmake.in
cpp/: CMakeLists.txt  readme.md
cpp/cmake/: template.cmake
cpp/dev/module/: CMakeLists.txt  helloworld.cpp  main.cpp
cpp/examples/: CMakeLists.txt  bc.cpp  dev.cpp  listen.cpp  msg.cpp  ps.cpp  regex.cpp  rr.cpp  simple.cpp
cpp/gtests/: CMakeLists.txt  test_bc.cpp  test_marko.cpp  test_ps.cpp  test_rr.cpp
cpp/include/marko/: ssocket.hpp
cpp/src/include/marko/: ascii.hpp  info.hpp  marko.hpp  message.hpp  pub_sub.hpp  request_reply.hpp  signals.hpp  sockaddr.hpp  socket.hpp  socket_bc.hpp  socket_types.hpp  socket_udp.hpp  socket_uds.hpp  time.hpp
cpp/src/marko/: info.hpp  marko.hpp  pub_sub.hpp  request_reply.hpp  signals.hpp  socket.hpp  socket_bc.hpp  socket_udp.hpp  socket_uds.hpp
docs/: c-sockets.md  notes.md
examples/: CMakeLists.txt  listen.cpp
include/marko/: version.h.in
python/: .gitignore  pyproject.toml  readme.md
python/dev/python/: mc.py
python/dev/udp/: udp-server.py  udp-swift-test.py
python/examples/: ps.py  rr.py
python/examples/beacon/: mc.py
python/examples/images/: test.py  udp_client.py  udp_server.py
python/examples/udp/: udp-server.py  udp-swift-test.py  udp.py  udpsocket.py
python/examples/udp/old/: udp.py
python/tests/: test_marko.py
